@@ -24,10 +24,10 @@ namespace ZincOxide {
 
     [Flags]
     public enum CompilerVerbosity {
-        Remark        = 0x01,
-        Assumption    = 0x02,
-        Warning        = 0x04,
-        Error        = 0x08
+        Remark     = 0x01,
+        Assumption = 0x02,
+        Warning    = 0x04,
+        Error      = 0x08
     }
 
 }
