@@ -1,5 +1,11 @@
 2013-09-19  Willem Van Onsem  <vanonsem.willem@gmail.com>
 
+	* ZincVarDeclItem.cs:
+	* ZincAnnotations.cs:
+	* ZincTypeInstExpressionBoxBase.cs: 
+
+2013-09-19  Willem Van Onsem  <vanonsem.willem@gmail.com>
+
 	* IZincIdentBox.cs:
 	* ZincScalarType.cs:
 	* ZincVarDeclItem.cs:
